  - parliament/wise - can be configured to use shared user DB
  - wise - fix some stats sorting
  - wise - fix UI saving of INI formatted config
  - viewer - fixed auth fallback to digest from header mode
  - all - Support ES 8
  - db.pl - fix sync-files/add-missing trying to add non pcap files
  - viewer - field-actions to display configurable menu items on field labels

3.4.2 2022/03/31
  - release - node 16.14.2
  - viewer - Packets/s, Sessions/s, Dropped/s didn't have correct total/average
  - viewer - host = $shortcut should work now
  - capture - support longer node names (thanks mcgillowen)
  - capture - host.smb.tokens wasn't defined correctly
  - wise - alienvault no longer uses key
  - tagger - support --insecure option
  - tests - support --insecure with tests

3.4.1 2022/03/16
  - release - node 16.14.1
  - capture - new snmp parser of a few fields
  - capture - rules can have numeric ranges
  - db.pl - stop using history type name
  - esproxy - added queries/_mapping to GET allow list
  - viewer - Packets/s, Sessions/s, Dropped/s weren't accurate (thanks mcgillowen)

3.4.0 2022/03/09
  - release - node 16.14.0, libpcap 1.10.1
  - release - Configure script deals with / in password better
  - BREAKING - in header auth mode userAuthIps allows only localhost by default
  - wise - fix issues with redis source
  - wise - threatstream in sqlite3 mode opens in readonly now
  - wise - support -o section.var=value command line option
  - wise - improve json parsing to handle non arrays when expecting an array
  - wise - didn't always encoding number fields correctly
  - db.pl - added a repair command that will fix some common issues
  - viewer - reading packets from S3 failed
  - viewer - increase speed when searching match fields
  - viewer - fixed lastUsed when in digest auth
  - viewer/wise - new userAuthIps setting that has which ips auth requests can
                  come from. header mode - default localhost, other - default all ips